--- a/seochecker-react/package.json
+++ b/seochecker-react/package.json
@@ -45,6 +45,7 @@
     "eslint-plugin-react": "7.16.0",
     "nan": "^2.14.1",
     "react-test-renderer": "^17.0.2",
+    "redux-mock-store": "^1.5.4",
     "typescript": "3.6.4"
   },
   "scripts": {
