--- a/SeoChecker.Api/appsettings.json
+++ b/SeoChecker.Api/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Cache": {
+    "Expiry": 60 // In minutes
+  },
+  "SeoChecker": {
+    "MaxResults":  100
+  }
 }
